# ChangeLog for x11-libs/qt
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.489 2007/09/25 13:32:04 caleb Exp $

  25 Sep 2007; Caleb Tennis <caleb@gentoo.org> qt-4.3.1-r1.ebuild:
  This guy is required whether we have a wacom tablet or not

  15 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org> qt-4.3.1-r1.ebuild:
  ppc stable, bug #192134

*qt-4.3.1-r1 (14 Sep 2007)
*qt-3.3.8-r4 (14 Sep 2007)

  14 Sep 2007; Caleb Tennis <caleb@gentoo.org>
  +files/qt-3.3.8-unicode-off-by-one.patch,
  +files/qt-4.3.1-unicode-off-by-one.patch, +qt-3.3.8-r4.ebuild,
  +qt-4.3.1-r1.ebuild:
  Bump for security bug #192472

  13 Sep 2007; Markus Rothe <corsair@gentoo.org> qt-4.3.1.ebuild:
  Stable on ppc64; bug #192134

  13 Sep 2007; Markus Ullmann <jokey@gentoo.org> qt-4.3.1.ebuild:
  Stable on sparc wrt bug #192134

  12 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> qt-4.3.1.ebuild:
  Stable on amd64 wrt bug #192134.

  12 Sep 2007; Jeroen Roovers <jer@gentoo.org> qt-4.3.1.ebuild:
  Stable for HPPA (bug #192134).

  11 Sep 2007; Raúl Porcel <armin76@gentoo.org> qt-4.3.1.ebuild:
  alpha/ia64/x86 stable wrt #192134

  07 Sep 2007; Caleb Tennis <caleb@gentoo.org> qt-3.3.8-r3.ebuild:
  Fix xineramaproto dep for immqt users, bug #189703

  23 Aug 2007; Caleb Tennis <caleb@gentoo.org> -qt-4.2.3-r1.ebuild:
  remove last of 4.2 series

  23 Aug 2007; Markus Rothe <corsair@gentoo.org>
  +files/qt-4.3.1-powerpc64.patch, qt-4.3.1.ebuild:
  Added patch for ppc64 and mark ebuild ~ppc64; bug #178779

  23 Aug 2007; Caleb Tennis <caleb@gentoo.org> -qt-3.3.8-r2.ebuild,
  -qt-4.3.0.ebuild, -qt-4.3.0-r1.ebuild:
  remove some older versions

  15 Aug 2007; Jeroen Roovers <jer@gentoo.org> qt-4.3.0-r2.ebuild:
  Stable for HPPA (bug #185446).

  12 Aug 2007; Caleb Tennis <caleb@gentoo.org> qt-4.3.1.ebuild:
  Fix pkgconfig dir, per bug #188397

  12 Aug 2007; Steve Dibb <beandog@gentoo.org> qt-3.3.8-r3.ebuild,