@@ -140,6 +140,7 @@ DIST qt-x11-immodule-unified-qt3.3.4-20041203.diff.bz2 113389 RMD160 c2d7269e9b2
 DIST qt-x11-immodule-unified-qt3.3.8-20070321-gentoo.diff.bz2 137387 RMD160 7f4f79c95faa2b8e71a78308af8feae5f6a6b06a SHA1 230cc532f1a3023967c5aee4cce87d1b9351b73d SHA256 06994304d2b7c699c4b6ea4183877652e261170f74282e89a3700ce6d4a98918
 DIST qt-x11-opensource-src-4.3.0.tar.gz 41955515 RMD160 2106dd8dda7a5b16305ba701e33c17e9349fddc3 SHA1 e433cf5482f24e81fa0b83bd1ed9a9c0abeb6ea4 SHA256 abc37774d327a9b1d1d35e223f014c7e92168cd6c7baf66156badca68f8f1440
 DIST qt-x11-opensource-src-4.3.1.tar.gz 43118858 RMD160 134c1f1a9e685a9519ff88a3afc59e7b8329a270 SHA1 ca59cfdcfc390cf16c6e6b503546e8bb2cc8e1e2 SHA256 4d59d0c74e4358ed59f11542403248687b04aa0c1bc06ea35b4b9e2cfc55e661
+DIST qt-x11-opensource-src-4.3.2.tar.gz 43462686 RMD160 b73a3d7a1edd11987544291cce80b56f5a499969 SHA1 265fb56ded2e7ff101ebd722bd2bc1638f96057d SHA256 70198d61d038007c787bab62700d35cbd3fc925b53fe920672f2a0afbae7e276
 EBUILD qt-3.3.4-r8.ebuild 10399 RMD160 3a63653870caa0ad2e0c10a4eaacc184ded66ef0 SHA1 300d978362f3cdfd98fe6c4a1bd323a078fae530 SHA256 71731b73f95aaaea0efd925ee3daeafa35501d0c6a77c13bbfaf0537084b97d7
 MD5 3b21df364140c05ae95aab131352b0a1 qt-3.3.4-r8.ebuild 10399
 RMD160 3a63653870caa0ad2e0c10a4eaacc184ded66ef0 qt-3.3.4-r8.ebuild 10399
@@ -164,10 +165,14 @@ EBUILD qt-4.3.1.ebuild 8585 RMD160 441439ac14de2cd5bb12bce86ec88ac3d8797e14 SHA1
 MD5 42a62a8619d60b6615c2c4eaf8a273c6 qt-4.3.1.ebuild 8585
 RMD160 441439ac14de2cd5bb12bce86ec88ac3d8797e14 qt-4.3.1.ebuild 8585
 SHA256 9e879347de621b856d1cd8bd7d93c4b0a9b1ffc916cef59f9ca5497b57f4416b qt-4.3.1.ebuild 8585
-MISC ChangeLog 34666 RMD160 0199f0bdd0fd91d46e38fef1d88a6784bea360e9 SHA1 ca24049ad0b8a58a6b350932bcae7824ded13652 SHA256 44cd9cb01523de8b81d06821fb8468b72a8c7b54348e24a7758b186509de858f
-MD5 f92178620443df652ef916c2c38291c0 ChangeLog 34666
-RMD160 0199f0bdd0fd91d46e38fef1d88a6784bea360e9 ChangeLog 34666
-SHA256 44cd9cb01523de8b81d06821fb8468b72a8c7b54348e24a7758b186509de858f ChangeLog 34666
+EBUILD qt-4.3.2.ebuild 8519 RMD160 664f95b0e67383ce6b9b34b39acdd9b9f415acca SHA1 fa2b2ebde26afb478adb8dc90c52e1d54893558c SHA256 3a571e5f5fbf593ffcba76722d35c7ddc9cf93e5a1a343cf4f05e623818cb11c
+MD5 11fbe8384c7f94a1ab6b758fd4725f3b qt-4.3.2.ebuild 8519
+RMD160 664f95b0e67383ce6b9b34b39acdd9b9f415acca qt-4.3.2.ebuild 8519
+SHA256 3a571e5f5fbf593ffcba76722d35c7ddc9cf93e5a1a343cf4f05e623818cb11c qt-4.3.2.ebuild 8519
+MISC ChangeLog 34772 RMD160 3cd88705d207546df8116859a02eee37de37b755 SHA1 fc4a8be1eb1eb3a25ba21dd7571c196b07402c0a SHA256 96f1796acb6154dbd6ed590c4d50d1e622418c99f1a6e2d1857d6a804e37de26
+MD5 89b8f6433a81861df8fbf9e06e8ba23b ChangeLog 34772
+RMD160 3cd88705d207546df8116859a02eee37de37b755 ChangeLog 34772
+SHA256 96f1796acb6154dbd6ed590c4d50d1e622418c99f1a6e2d1857d6a804e37de26 ChangeLog 34772
 MISC metadata.xml 156 RMD160 d76590850d56864c8d99e6877ed15841b55ef1fc SHA1 e872bab086832a9db3f0fa9b1897c70577d3af21 SHA256 94c4f580c1a55f8a5e1a1dcdd6dedfea0b8bd78c1d7137c354938d73c49e4448
 MD5 512150b47a904b0240101e319856aab1 metadata.xml 156
 RMD160 d76590850d56864c8d99e6877ed15841b55ef1fc metadata.xml 156
@@ -190,3 +195,6 @@ SHA256 e193965b05364f881551afe93de0500f5333e6efe4ea52a350b98f1802a67a47 files/di
 MD5 461f2f1d8c1b5294a0c46666c44f2ed4 files/digest-qt-4.3.1-r1 289
 RMD160 0052f47678ffdb5f81875b7a9c6137ec882853a1 files/digest-qt-4.3.1-r1 289
 SHA256 e193965b05364f881551afe93de0500f5333e6efe4ea52a350b98f1802a67a47 files/digest-qt-4.3.1-r1 289
+MD5 ed31b948a97af00c25db6283315037fd files/digest-qt-4.3.2 289
+RMD160 6e7914e1a28f2ac9e99c58fbc3c7ae6432e15fd6 files/digest-qt-4.3.2 289
+SHA256 47f1e69a82b6e66d515566900675fb127edd7542d5846e16f8e047648d1820db files/digest-qt-4.3.2 289
