@@ -1,0 +1,3 @@
+MD5 a60490b36099bdd10c4d2f55430075b3 qt-x11-opensource-src-4.3.2.tar.gz 43462686
+RMD160 b73a3d7a1edd11987544291cce80b56f5a499969 qt-x11-opensource-src-4.3.2.tar.gz 43462686
+SHA256 70198d61d038007c787bab62700d35cbd3fc925b53fe920672f2a0afbae7e276 qt-x11-opensource-src-4.3.2.tar.gz 43462686
